<resources>
    <string name="app_name">Project-2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_price">%s €</string>
    <string name="add_product">Add Product</string>
    <string name="app_logo">App Logo</string>
    <string name="wishlist">Favorites</string>
    <string name="empty_message">It seems nothing in here.\nMake a wish</string>
    <string name="start_shopping">Start shopping</string>
    <string name="back_button">Back</string>
    <string name="empty_image">Empty Wishlist</string>
</resources>