<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WishListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wishlistTitle"
        tools:listitem="@layout/item_wishlist"/>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishlistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wishlist"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/emptyImage"
        android:layout_width="406dp"
        android:layout_height="328dp"
        android:layout_marginTop="188dp"
        android:visibility="gone"
        android:contentDescription="@string/empty_image"
        android:src="@mipmap/emptywishlist_icon"
        app:layout_constraintTop_toBottomOf="@id/wishlistTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="311dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/empty_message"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/emptyImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.409"/>

    <Button
        android:id="@+id/startShoppingButton"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="24dp"
        android:textSize="20sp"
        android:paddingVertical="8dp"
        android:text="@string/start_shopping"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
